Insurance/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: insurancev2
  name: insurancev2
spec:
  ports:
    -
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: insurancev2
